--- a/index.html
+++ b/index.html
@@ -1055,7 +1055,7 @@
                     <p>
                       Ninangs may wear gowns in baby blue, silver, or pastel
                       shades. Ninongs should wear Barong or suits with baby blue
-                      accents.
+                      accent.
                     </p>
                   </div>
                 </div>
