--- a/index.html
+++ b/index.html
@@ -1055,7 +1055,7 @@
                     <p>
                       Ninangs may wear gowns in baby blue, silver, or pastel
                       shades. Ninongs should wear Barong or suits with baby blue
-                      accent.
+                      accents.
                     </p>
                   </div>
                 </div>
@@ -1114,7 +1114,7 @@
                 >
                   <div class="wpo-service-img text-center">
                     <img
-                      src="assets/images/service/ser-4.png"
+                      src="assets/images/service/img-4.jpg"
                       alt="Wedding Cake"
                       class="img-fluid"
                     />
