--- a/index.html
+++ b/index.html
@@ -1100,8 +1100,8 @@
                     <h4>Guests</h4>
                     <p>
                       Formal or semi-formal attire is expected. Ladies may wear
-                      baby blue or soft-toned dresses. Gentlemen may wear suits
-                      or Barong with subtle powder blue details.
+                      powder blue or soft-toned dresses. Gentlemen may wear
+                      suits or Barong with subtle powder blue details.
                     </p>
                   </div>
                 </div>
