--- a/index.html
+++ b/index.html
@@ -1054,8 +1054,8 @@
                     <h4>Principal Sponsors</h4>
                     <p>
                       Ninangs may wear gowns in powder blue, silver, or pastel
-                      shades. Ninongs should wear Barong or suits with baby blue
-                      accents.
+                      shades. Ninongs should wear Barong or suits with pastel
+                      blue accents.
                     </p>
                   </div>
                 </div>
