--- a/gallery.html
+++ b/gallery.html
@@ -216,6 +216,60 @@
 
   <body>
     <div class="page-wrapper">
+      <header id="header">
+        <div class="wpo-site-header wpo-header-style-3">
+          <nav class="navigation navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+              <div class="row align-items-center">
+                <div class="col-lg-3 col-md-3 col-3 d-lg-none dl-block">
+                  <div class="mobail-menu">
+                    <button type="button" class="navbar-toggler open-btn">
+                      <span class="sr-only">Toggle navigation</span>
+                      <span class="icon-bar first-angle"></span>
+                      <span class="icon-bar middle-angle"></span>
+                      <span class="icon-bar last-angle"></span>
+                    </button>
+                  </div>
+                </div>
+                <div class="col-lg-2 col-md-6 col-6">
+                  <div class="navbar-header">
+                    <a class="navbar-brand" href="index.html">Rocci</a>
+                  </div>
+                </div>
+                <div class="col-lg-8 col-md-1 col-1">
+                  <div
+                    id="navbar"
+                    class="collapse navbar-collapse navigation-holder"
+                  >
+                    <button class="menu-close"><i class="ti-close"></i></button>
+                    <ul class="nav navbar-nav mb-2 mb-lg-0">
+                      <li><a href="index.html">Home</a></li>
+                      <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </nav>
+        </div>
+      </header>
+
+      <section class="wpo-page-title">
+        <div class="container">
+          <div class="row">
+            <div class="col col-xs-12">
+              <div class="wpo-breadcumb-wrap">
+                <h2>Gallery</h2>
+                <ol class="wpo-breadcumb-wrap">
+                  <li><a href="index.html">Home</a></li>
+                  <li>Gallery</li>
+                </ol>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- Gallery Section -->
       <section class="gallery" id="gallery">
         <!-- 5 Portrait -->
@@ -307,6 +361,26 @@
           </button>
         </div>
       </div>
+      <footer class="wpo-site-footer-s2">
+        <div class="wpo-lower-footer">
+          <div class="container">
+            <div class="row">
+              <div class="col col-xs-12">
+                <p class="copyright" style="margin-top: 15px">
+                  &copy; 2025 #KhelFaoandtheOne. | All rights reserved. |
+                  <a href="contact.html"> Contact Us </a>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="ft-shape-1">
+          <img src="assets/images/footer-shape-1.svg" alt="" />
+        </div>
+        <div class="ft-shape-2">
+          <img src="assets/images/footer-shape-2.svg" alt="" />
+        </div>
+      </footer>
     </div>
 
     <!-- Scripts -->
