Wedding Guide List

--- a/groom-bride.html
+++ b/groom-bride.html
@@ -90,10 +90,10 @@
                 <div class="row">
                     <div class="col col-xs-12">
                         <div class="wpo-breadcumb-wrap">
-                            <h2>Bridesmaids & Groomsmen</h2>
+                            <h2>Entourage</h2>
                             <ol class="wpo-breadcumb-wrap">
                                 <li><a href="index.html">Home</a></li>
-                                <li>Bridesmaids & Groomsmen</li>
+                                <li>Entourage</li>
                             </ol>
                         </div>
                     </div>
