--- a/wedguide.html
+++ b/wedguide.html
@@ -409,7 +409,7 @@
 }
             </style>
 
-                <section class="wpo-contact-section-s2 wed-section-padding"> <div class="container" id="attire">
+                <section class="wpo-service-section wed-section-padding"> <div class="container" id="attire">
                     <div class="row justify-content-center text-center">
                         <div class="col-xl-6 col-lg-8 col-md-10 col-12">
                             <div class="wpo-section-title">
